--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 # the source code...
 !blinky.c
 
+# the vector table definition...
+!vector.c
+
+# the linker script...
+!linkerscript.ld
+
 # the Makefile...
 !Makefile
 
